--- a/front_end/src/style/style.css
+++ b/front_end/src/style/style.css
@@ -32,6 +32,12 @@ body{
 
 .p_fio{
     font-size: 16px;
+    margin: 5px 0 0 0;
+}
+
+.p_age{
+    font-size: 16px;
+    margin: 5px 0 15px 0;
 }
 
 .p_info{
@@ -40,6 +46,18 @@ body{
 
 .p_cert{
     font-size: 12px;
+}
+
+.skills{
+    margin: 5px 0 !important;
+}
+
+.personal_info p{
+    margin: 15px 0;
+}
+
+.personal_info p span{
+    font-weight: 500;
 }
 
 .myHeader{
@@ -248,12 +266,13 @@ body{
     color: white;
     background: linear-gradient(#49A4F8, #5A49F8);
     margin: 10px;
-    border-radius: 50%;
+    border-radius: 18px;
     display: flex;
     align-items: center;
     justify-content: center;
     box-shadow: 0px 0px 50px 5px rgba(0, 0, 0, 0.1);
     transition: 0.2s;
+    cursor: pointer;
 }
 
 .social:hover{
@@ -297,7 +316,7 @@ body{
 .tabsIt a{
     border-radius: 5px;
     color: #5A49F8;
-    font-weight: bolt;
+    font-weight: bold;
     text-decoration: none;
     padding: 10px;
 }
@@ -308,7 +327,7 @@ body{
 .my-tabs{
     color: #5A49F8;
     background: white;
-    font-weight: bolt;
+    font-weight: bold;
     text-decoration: none;
     padding: 10px 15px;
 }
@@ -336,4 +355,94 @@ body{
     margin-left:21%;
     width:200px;
     filter: opacity(70%);
+}
+
+.title_head{
+    display: flex;
+    flex-direction: row;
+}
+
+.title_head p{
+    margin: 0 10px;
+    font-size: 30px;
+    color: #2f2f2f;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.title_head button{
+    border: none;
+    background: none;
+    cursor: pointer;
+    border-radius: 50%;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.title_head button img{
+    width: 40px;
+    height: 40px;
+}
+
+.resume a{
+    width: auto !important;
+    padding: 0 10px;
+    font-size: 14px;
+}
+
+.resume a img{
+    width: 20px;
+    height: 20px;
+    margin: 0 0 0 5px;
+}
+
+.social_list{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.social_list a{
+    margin: 5px !important;
+}
+
+.photo{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.photo img{
+    width: 100%;
+}
+.profile{
+    width: 25%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px 0;
+}
+
+.profile_info{
+    width: 50%;
+    padding: 20px 20px;
+}
+
+.profile_cert{
+    width: 25%;
+}
+
+.detail_info{
+    flex-direction: column !important;
+    align-items: start !important;
+}
+
+.detail_info span , .detail_info span a{
+    margin: 0 20px 0 0;
 }
