--- a/front_end/src/style/style.css
+++ b/front_end/src/style/style.css
@@ -185,12 +185,17 @@ body{
 }
 
 .avatar{
-    padding: 20px 20px;
-    width: 100px;
-    height: 100px;
+    margin: 10px;
+    aspect-ratio: 1/1;
+    width: 15%;
     display: flex;
     align-items: center;
     justify-content: center;
+    background-size: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-radius: 10px;
+    align-self: start;
 }
 
 .avatar img{
@@ -198,12 +203,12 @@ body{
 }
 
 .info{
-    margin: 0 0 0 20px;
+    margin: 10px 10px;
     width: calc(80% - 140px);
 }
 
 .conf-but{
-    width: 18%;
+    width: 20%;
     align-self: stretch;
     display: flex;
     flex-direction: column;
@@ -411,22 +416,47 @@ body{
     margin: 5px !important;
 }
 
+.vacancy_info{
+    background-color: white;
+    box-shadow: 0px 0px 50px 5px rgba(0, 0, 0, 0.1);
+    border-radius: 20px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 30px 0;
+}
+
 .photo{
     display: flex;
     align-items: center;
     justify-content: center;
+    background-size: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    aspect-ratio: 1/1;
+    width: 100%;
+    border-radius: 10px;
+}
+
+.photo_vacancy{
+    width: 10%;
+}
+
+.photo_vacancy img{
+    width: 100%;
 }
 
 .photo img{
     width: 100%;
 }
 .profile{
+    align-self: flex-start;
     width: 25%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    padding: 20px 0;
+    margin: 20px 20px;
 }
 
 .profile_info{
@@ -436,11 +466,23 @@ body{
 
 .profile_cert{
     width: 25%;
+    align-self: start;
+    margin-left: 10px;
 }
 
 .profile_cert img{
-    width: 100%;
+    width: calc(100% - 20px);
+    margin: 10px 20px 10px 0px;
+    box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.2);
 }
+.profile_cert img:first-child{
+    margin: 20px 20px 10px 0px;
+}
+
+.profile_cert img:last-child{
+    margin: 10px 20px 20px 0px;
+}
+
 
 .detail_info{
     flex-direction: column !important;
