--- a/front_end/src/style/style.css
+++ b/front_end/src/style/style.css
@@ -171,6 +171,35 @@ body{
     margin: 10px 0;
 }
 
+.stat{
+    background-color: white;
+    box-shadow: 0px 0px 50px 5px rgba(0, 0, 0, 0.1);
+    border-radius: 20px;
+    padding: 20px 30px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.stat .big_stat{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.stat .small_stat{
+    width: 30%;
+}
+
+.stat p, .stat h3{
+    text-align: center;
+}
+
+.stat_title{
+    font-size: 36px;
+}
+
 .filter span a:hover{
 
     transition: 0.3s;
